included draggable.js into index.html

--- a/index.html
+++ b/index.html
@@ -243,5 +243,6 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/StartHackDashboard/js/ie10-viewport-bug-workaround.js"></script>
     <script src="/StartHackDashboard/js/jquery-2.2.1.js"></script>
+    <script src="/StartHackDashboard/js/draggable.js"></script>
   </body>
 </html>
