--- a/index.html
+++ b/index.html
@@ -67,9 +67,6 @@
             <li><a href="#">Profile</a></li>
             <li><a href="#">Help</a></li>
           </ul>
-          <form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="Search...">
-          </form>
         </div>
       </div>
     </nav>
@@ -77,8 +74,12 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
+        <form>
+            <input type="text" class="form-control" placeholder="Search...">
+          </form>
           <ul class="nav nav-sidebar">
             <li class="active"><a href="#">Row <span class="sr-only">(current)</span></a></li>
+           
             <li><a href="#">Label</a></li>
             <li><a href="#">Slider</a></li>
             <li><a href="#">Checkbox</a></li>
