--- a/index.html
+++ b/index.html
@@ -67,12 +67,14 @@
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">Dashboard</h1>
+          <h1 class="page-header">Create your own calculator</h1>
 <div id="sandbox" class="city">
-  <h2>London</h2>
-  <p>London is the capital city of England.</p>
-  <p>It is the most populous city in the United Kingdom,
-with a metropolitan area of over 13 million inhabitants.</p>
+  <h1>Mortgage Calculator<span class="label label-default"></span></h1>
+  <h3>The easy and fast way to calculate the cost of your montage<span class="label label-default"></span></h3><br>
+  <h4>With the mortgafe calculator, you can easily and quickly calculate the monthly costs of your home<span class="label label-default"></span></h4>
+
+  </ul>
+</div>
 </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
