--- a/index.html
+++ b/index.html
@@ -39,18 +39,7 @@
     <![endif]-->
   </head>
 
-  <body>
-
-
-
-
-
-
-
-
-
-
-  
+  <body>  
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
@@ -71,9 +60,13 @@
 <div id="sandbox" class="city">
   <h1>Mortgage Calculator<span class="label label-default"></span></h1>
   <h3>The easy and fast way to calculate the cost of your montage<span class="label label-default"></span></h3><br>
-  <h4>With the mortgafe calculator, you can easily and quickly calculate the monthly costs of your home<span class="label label-default"></span></h4>
-
-  </ul>
+  <h4>With the mortgage calculator, you can easily and quickly calculate the monthly costs of your home<span class="label label-default"></span></h4>
+  </ul>  
+<div class="input-group">
+  <span class="input-group-addon">$</span>
+  <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+  <span class="input-group-addon">.00</span>
+</div>
 </div>
 </div>
     <!-- Bootstrap core JavaScript
