--- a/index.html
+++ b/index.html
@@ -40,22 +40,11 @@
   </head>
 
   <body>
-
-
-
-
-
-
-
-
-
-
-  
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
         <form>
-            <input type="text" class="form-control" placeholder="Search...">
+            <input type="text" onkeyup="filter(this)" class="form-control" placeholder="Search...">
           </form>
           <ul id="elements" class="nav nav-sidebar">
             <li><a href="#">Row</a></li>
@@ -69,8 +58,8 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <h1 class="page-header">Dashboard</h1>
 <div id="sandbox" class="city">
-  <h2>London</h2>
-  <p>London is the capital city of England.</p>
+  <h2>whatever</h2>
+  <p>Lwevernd.</p>
   <p>It is the most populous city in the United Kingdom,
 with a metropolitan area of over 13 million inhabitants.</p>
 </div>
@@ -86,5 +75,6 @@ with a metropolitan area of over 13 million inhabitants.</p>
     <script src="/StartHackDashboard/js/ie10-viewport-bug-workaround.js"></script>
     <script src="/StartHackDashboard/js/jquery-2.2.1.js"></script>
     <script src="/StartHackDashboard/js/draggable.js"></script>
+    <script src="/StartHackDashboard/js/search.js"></script>
   </body>
 </html>
