--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <body>
 =======
   <body>  
->>>>>>> origin/master
+
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
@@ -62,7 +62,7 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <h1 class="page-header">Create your own calculator</h1>
 <div id="sandbox" class="city">
-<<<<<<< HEAD
+
   <h2>whatever</h2>
   <p>Lwevernd.</p>
   <p>It is the most populous city in the United Kingdom,
@@ -78,7 +78,6 @@ with a metropolitan area of over 13 million inhabitants.</p>
   <span class="input-group-addon">.00</span>
 </div>
 </div>
->>>>>>> origin/master
 </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -93,5 +92,7 @@ with a metropolitan area of over 13 million inhabitants.</p>
     <script src="/StartHackDashboard/js/jquery-2.2.1.js"></script>
     <script src="/StartHackDashboard/js/draggable.js"></script>
     <script src="/StartHackDashboard/js/search.js"></script>
+    <script src="/StartHackDashboard/js/convert-elements.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
   </body>
 </html>
