--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
-
-
-    
-
-    <title>Dashboard Template for Bootstrap</title>
+    <title>Your Calculator Dashboard</title>
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.6.8/dragula.min.js'></script>
     <!-- Bootstrap core CSS -->
@@ -43,10 +39,11 @@
   <body>
 =======
   <body>  
-
     <div class="container-fluid">
+
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
+	
         <form>
             <input type="text" onkeyup="filter(this)" class="form-control" placeholder="Search...">
           </form>
@@ -60,14 +57,13 @@
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+	        	    <div class="jumbotron">
+  <h1>Calculators made easy.</h1>
+  <p>Create powerful, intuite and effective calculators easily.</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Create your first calculator</a></p>
+</div>
           <h1 class="page-header">Create your own calculator</h1>
 <div id="sandbox" class="city">
-
-  <h2>whatever</h2>
-  <p>Lwevernd.</p>
-  <p>It is the most populous city in the United Kingdom,
-with a metropolitan area of over 13 million inhabitants.</p>
-=======
   <h1>Mortgage Calculator<span class="label label-default"></span></h1>
   <h3>The easy and fast way to calculate the cost of your montage<span class="label label-default"></span></h3><br>
   <h4>With the mortgage calculator, you can easily and quickly calculate the monthly costs of your home<span class="label label-default"></span></h4>
