--- a/index.html
+++ b/index.html
@@ -34,10 +34,6 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-
-<<<<<<< HEAD
-  <body>
-=======
   <body>  
     <div class="container-fluid">
 
@@ -45,7 +41,7 @@
         <div class="col-sm-3 col-md-2 sidebar">
 	
         <form>
-            <input type="text" onkeyup="filter(this)" class="form-control" placeholder="Search...">
+            <input type="text" onkeyup="filter(this)" class="form-control" placeholder="Search objects...">
           </form>
           <ul id="elements" class="nav nav-sidebar">
             <li><a href="#">Row</a></li>
@@ -59,7 +55,7 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 	        	    <div class="jumbotron">
   <h1>Calculators made easy.</h1>
-  <p>Create powerful, intuite and effective calculators easily.</p>
+  <p>Create powerful, intuite and effective calculators easily and quickly.</p>
   <p><a class="btn btn-primary btn-lg" href="#" role="button">Create your first calculator</a></p>
 </div>
           <h1 class="page-header">Create your own calculator</h1>
@@ -73,7 +69,7 @@
   <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
   <span class="input-group-addon">.00</span>
 </div>
-</div>
+  <br><button type="button" class="btn btn-default navbar-btn">Share your code with the world</button>
 </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
