minor ui changes

--- a/index.html
+++ b/index.html
@@ -52,13 +52,15 @@
 			      <li><a href="#">Textfield</a></li>
           </ul>
         </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+  <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 	        	    <div class="jumbotron">
   <h1>Calculators made easy.</h1>
   <p>Create powerful, intuite and effective calculators easily and quickly.</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Create your first calculator</a></p>
+  <p><a class="btn btn-primary btn-lg" href="#" onclick="showFormBuilder()" role="button">Create your first calculator</a></p>
 </div>
-          <h1 class="page-header">Create your own calculator</h1>
+
+<div id="formBuilder">
+<h1 class="page-header">Create your own calculator</h1>
 <div id="sandbox" class="city">
   <h1>Mortgage Calculator<span class="label label-default"></span></h1>
   <h3>The easy and fast way to calculate the cost of your montage<span class="label label-default"></span></h3><br>
@@ -70,6 +72,7 @@
   <span class="input-group-addon">.00</span>
 </div>
   <br><button type="button" class="btn btn-default navbar-btn">Share your code with the world</button>
+</div>
 </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
