--- a/index.html
+++ b/index.html
@@ -35,9 +35,42 @@
     <![endif]-->
   </head>
   <body>  
+
+
     <div class="container-fluid">
 
       <div class="row">
+      <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Brand</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
         <div class="col-sm-3 col-md-2 sidebar">
 	
         <form>
@@ -56,22 +89,7 @@
 	        	    <div class="jumbotron">
   <h1>Calculators made easy.</h1>
   <p>Create powerful, intuite and effective calculators easily and quickly.</p>
-<<<<<<< HEAD
   <p><a class="btn btn-primary btn-lg" href="#" onclick="showFormBuilder()" role="button">Create your first calculator</a></p>
-=======
-  <p><a id="hide" class="btn btn-primary btn-lg" href="#" role="button">Create your first calculator</a></p>
-
-
-<script>
-$(document).ready(function(){
-    $("#hide").click(function(){
-        $(".jumbotron").hide();
-    })
-});
-</script>
-
-
-
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script>
@@ -82,10 +100,9 @@ $(document).ready(function(){
     });
 });
 </script>
-
-
->>>>>>> origin/master
 </div>
+
+
 
 <div id="formBuilder">
 <h1 class="page-header">Create your own calculator</h1>
