--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
     <![endif]-->
   </head>
   <body>  
-
-
     <div class="container-fluid">
-
+e
       <div class="row">
       <nav class="navbar navbar-default">
   <div class="container-fluid">
@@ -86,10 +84,10 @@
           </ul>
         </div>
   <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-	        	    <div class="jumbotron">
+	        	    <div class="jumbotron" id="jumbotron">
   <h1>Calculators made easy.</h1>
   <p>Create powerful, intuite and effective calculators easily and quickly.</p>
-  <p><a class="btn btn-primary btn-lg" href="#" onclick="showFormBuilder()" role="button">Create your first calculator</a></p>
+  <p><a class="btn btn-primary btn-lg" href="#formBuilder" button" id="buttonCreate">Create your first calculator</a></p>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script>
